Bug 107801 - [CI][BAT] igt@pm_rpm@module-reload - fail - Test assertion failure function __igt_pm_enable_audio_runtime_pm[...]Failed assertion: fd >= 0
Summary: [CI][BAT] igt@pm_rpm@module-reload - fail - Test assertion failure function _...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-03 12:31 UTC by Martin Peres
Modified: 2018-11-13 16:07 UTC (History)
1 user (show)

See Also:
i915 platform: KBL
i915 features: power/runtime PM


Attachments

Description Martin Peres 2018-09-03 12:31:49 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4756/fi-kbl-7567u/igt@pm_rpm@module-reload.html

(pm_rpm:4503) igt_pm-CRITICAL: Test assertion failure function __igt_pm_enable_audio_runtime_pm, file ../lib/igt_pm.c:170:
(pm_rpm:4503) igt_pm-CRITICAL: Failed assertion: fd >= 0
(pm_rpm:4503) igt_pm-CRITICAL: Last errno: 2, No such file or directory
(pm_rpm:4503) igt_pm-CRI
Comment 1 Chris Wilson 2018-09-04 10:08:16 UTC
commit 925fbed79fd71ff998a962f12f7a8bb18c06abd7 (HEAD, upstream/master)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Sep 3 13:47:49 2018 +0100

    lib/pm: Wait a little for sound module load to complete
    
    Sometimes we may probe the sound module as it is still being registered
    and its debugfs not yet fully populated. If we do not find a file we
    expect to exist, sleep a little and check again.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=107801
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Imre Deak <imre.deak@intel.linux.com>
    Reviewed-by: Imre Deak <imre.deak@intel.linux.com>
Comment 2 Lakshmi 2018-10-14 15:05:31 UTC
This issue occurred only once with CI_DRM_4756 (1 month, 1 week / 567 runs ago).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.